force-app/main/default/objects/Account/fields/Contacto_LastName__c.field-meta.xml
<CustomField>
    <fullName>Contacto_LastName__c</fullName>
    <label>Contacto LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>