force-app/main/default/objects/Account/fields/Contacto_Name__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Name__c</fullName>
    <inlineHelpText>Ingrese nombre de contacto a crear</inlineHelpText>
    <label>Contacto Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>