force-app/main/default/objects/Account/fields/Longitud__c.field-meta.xml
<CustomField>
    <fullName>Longitud__c</fullName>
    <label>Longitud</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>