force-app/main/default/objects/Account/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <label>Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viaje Individual</fullName>
            </value>
            <value>
                <fullName>Alquiler de Vehiculo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>