force-app/main/default/objects/Account/fields/Servicio_Vendido__c.field-meta.xml
<CustomField>
    <fullName>Servicio_Vendido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicio Vendido</label>
    <referenceTo>Servicio_Vendido__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>