force-app/main/default/objects/Account/recordTypes/Alquileres_de_Vehiculos.recordType-meta.xml
<RecordType>
    <fullName>Alquileres_de_Vehiculos</fullName>
    <active>true</active>
    <description>Vistas para alquileres de Vehiculos</description>
    <label>Alquileres de Vehiculos</label>
</RecordType>